--- a/css/template.css
+++ b/css/template.css
@@ -88,7 +88,8 @@ div.buttonheading {
 #ja-wrapper {
 	width: 950px;
 	margin: 0 auto;
-	background: url(../images/bg-sb.jpg) repeat-y top left;
+	/*background: url(../images/bg-sb.jpg) repeat-y top left;*/
+	background: url(../images/bg-sb1.jpg) repeat-y top left;		
 	border: 2px solid #e6e6e6;
 }
 
@@ -120,7 +121,8 @@ div.buttonheading {
 	float: right;
 	clear: both;
 	display: block;
-	width: 70%;
+	/*width: 70%;*/
+	width: 100%;
 }
 
 #ja-contentwrap {
@@ -1100,12 +1102,12 @@ color: #FFFF25;
 
 /********************/
 .news_title{
-	font-weight:bold;
+	font-weight:bold;	
 }
 .news_date{
 	font-style:italic;
 	font-size:10px;
-	color:#CCC;
+	color:#11A2FC;
 	width:100px;
 	float:left;
 	text-align:left
