--- a/css/template.css
+++ b/css/template.css
@@ -89,7 +89,8 @@ div.buttonheading {
 	width: 950px;
 	margin: 0 auto;
 	/*background: url(../images/bg-sb.jpg) repeat-y top left;*/
-	background: url(../images/bg-sb1.jpg) repeat-y top left;		
+	/*background: url(../images/bg-sb1.jpg) repeat-y top left;*/
+	background:#F1F1F1;
 	border: 2px solid #e6e6e6;
 }
 
@@ -153,8 +154,9 @@ div.buttonheading {
 #ja-col2 {
 	float: right;
 	overflow: hidden;
-	width: 23%;
+	width: 22%;
 	background: #f1f1f1;
+	border-left:#cccccc solid 1px;
 }
 
 #ja-col2 div.ja-innerpad {
