--- a/css/template.css
+++ b/css/template.css
@@ -368,6 +368,7 @@ div.module_hilite {
 	width: 100%;
 	/* background: url(../images/box-br.gif) no-repeat bottom right #FFFFFF; */
 	margin-bottom: 10px;
+	margin-top:2px;
 }
 
 div.module div,
@@ -392,7 +393,7 @@ div.module div div div,
 div.module_text div div div,
 div.module_menu div div div,
 div.module_hilite div div div {
-	padding: 4px 15px 15px;
+	/*padding: 4px 15px 15px;*/
 	/* background: url(../images/box-tl.gif) no-repeat top left; */
 }
 
@@ -1224,7 +1225,8 @@ text-align:justify;
 
 .group_area{
 	border:#ccc solid 1px;
-	margin-top:5px;
+	margin-top:2px;
+	/*border-right:none;*/
 }
 .group_content{	
 	margin:5px 5px 5px 10px;
