--- a/css/ui/css/redmond/jquery-ui.custom.css
+++ b/css/ui/css/redmond/jquery-ui.custom.css
@@ -59,6 +59,8 @@
 .ui-state-hover, .ui-widget-content .ui-state-hover, .ui-widget-header .ui-state-hover, .ui-state-focus, .ui-widget-content .ui-state-focus, .ui-widget-header .ui-state-focus { border: 1px solid #79b7e7; background: #d0e5f5 url(images/ui-bg_glass_75_d0e5f5_1x400.png) 50% 50% repeat-x; font-weight: bold; color: #1d5987; }
 .ui-state-hover a, .ui-state-hover a:hover { color: #1d5987; text-decoration: none; }
 .ui-state-active, .ui-widget-content .ui-state-active, .ui-widget-header .ui-state-active { border: 1px solid #79b7e7; background: #f5f8f9 url(images/ui-bg_inset-hard_100_f5f8f9_1x100.png) 50% 50% repeat-x; font-weight: bold; color: #e17009; }
+/*.ui-state-active, .ui-widget-content .ui-state-active, .ui-widget-header .ui-state-active { border: 1px solid #79b7e7; background: #f5f8f9 url(images/ui-bg_inset-hard_100_f5f8f9_1x100.png) 50% 50% repeat-x; font-weight: bold; color: #e17009; }*/
+/*.ui-state-active a, .ui-state-active a:link, .ui-state-active a:visited { color: #e17009; text-decoration: none; }*/
 .ui-state-active a, .ui-state-active a:link, .ui-state-active a:visited { color: #e17009; text-decoration: none; }
 .ui-widget :active { outline: none; }
 
@@ -101,9 +103,14 @@ input, select {
 	margin:1px;
 	padding: 4px 7px;
 	outline: 0;
-	-webkit-appearance: none;
+	/*-webkit-appearance: none;*/
 	/*end_css_overwrite*/
 }
+.datepick-month-year{ /*fix datepicker*/
+	margin:0px 0px 0px 0px !important;
+	padding: 0px 0px 0px 0px !important ;
+}
+
 input:focus, textarea:focus, select:focus {
     background-color: #FFFFFF;
     border-color: #ABC3D7;
@@ -131,26 +138,74 @@ input, select, textarea, button, .button,.file {
 	line-height:25px
 }
 
-.title_1{
-	color:#537AA1;
-	font-size:15px;
-	font-weight:bold;
-}
-/*begin_table*/	
-	.table_info tr th{
-		background:#E1EFFB;
+/*begin_table*/
+
+/*begin table form*/
+	.table_form tr{		
+		padding-top: 5px;
+		padding-bottom: 5px;
+	}
+	
+	.table_form tr th{		
 		font-weight:bold;
-		font-size:14px;
+		font-size:13px;
+		padding:5px;
+	}
+	.table_form tr td{
+		background:#F4F4F4;
+		font-size:13px;
+		padding:5px;
+	}
+/*end table form*/
+	.table_info tr th{
+		//background:#E1EFFB;
+		font-weight:bold;
+		font-size:13px;
 	}
 	.table_info tr td{
 		background:#F4F4F4;
-		font-size:14px;
+		font-size:13px;
 	}
 	.table_info .top-tdleft{
 		width:30%;
 	}
 	.table_info .top{
 		width:auto;
+	}
+	
+	
+	.table_info_1{
+		/*border:1px solid #dedede;*/
+	}
+	.table_info_1 tr th{		
+		font-weight:bold;
+		font-size:13px;
+		color:#5E5E55;
+		background:#E1EFFB;
+		/*border: 1px solid #CCC;
+		border-left:1px solid #ccc;*/
+	}
+	.table_info_1 tr td{
+		background:#FFF;
+		font-size:13px;
+		/*border-left:1px solid #ccc;*/
+	}
+	.table_info_1 th, .table_info_1 td {
+		/*border-bottom:1px solid #dedede;*/
+	}
+	.title_name{
+		font-weight:bold;
+		font-size:14px;
+		color:#5E5E55;		
+	}
+	.title_value{		
+		font-size:14px;		
+	}
+	.title_name_bg{
+		font-weight:bold;
+		font-size:14px;
+		color:#5E5E55;
+		background:#E1EFFB;
 	}
 	
 /*end_table*/
@@ -163,20 +218,106 @@ input, select, textarea, button, .button,.file {
 	}
 /*note*/
 
+
 body{
 	color:#666666;
 }
-
+/*
+table{
+	padding:2px;
+}*/
 .req{
 	color:red;
 }
 
-h1{
-	color:#F56D32;
-	font-size:20px;
-	text-transform:uppercase;
+.clear{
+	clear:both;
+}
+.tip{
+	font-style:italic;
+}
+.tip_1{
+	font-style:italic;
+	color:#FF0000;
+}
+.group_title{
+	font-size:15px;
+	font-weight:bold;
+	color:#296d9c;
+	/*border-color:#FF0000 !important;
+	-moz-border-radius: 3px;
+	-webkit-border-radius: 3px;
+	border-radius: 3px;*/
 }
 
+.disible{
+	background-color:#FFF7EA !important;
+}
+.readonly{
+	background-color:#FFF7EA !important;
+}
+
+.t_center{
+	text-align: center !important;
+}
+.t_left{
+	text-align: left !important;
+}
+.t_right{
+	text-align: right !important;
+}
+.t_hide{
+	display:none;
+}
+
+.width_full{
+	/*width:100% !important;*/
+}
+
+
+.group_info{
+	background-color:#FFFFFF;
+	border:1px;border: 1px solid #c5dbec;		
+	-moz-border-radius: 3px;
+	-webkit-border-radius: 3px;
+	border-radius: 3px;
+	padding-bottom:5px;
+	margin-top:5px;
+	margin-bottom:5px;
+	padding-left: 5px;
+	
+	
+}
+
+.group_info_title_bg{
+	background:url("images/ui-bg_glass_85_dfeffc_1x400.png") repeat-x scroll 50% 50% #dfeffc;
+	/*background-color:#E1EFFB !important;*/
+	font-size:14px;
+	color:#0000FF;
+	border-bottom:none; 
+	height:22px;
+	line-height:20px;
+	padding:10px 0px 5px 20px;
+	-moz-border-radius: 3px;
+	-webkit-border-radius: 3px;
+	border-radius: 3px;
+	margin-bottom:5px;
+	
+}
+
+/*begin expand*/
+.collapsed {
+    cursor: pointer;
+    color: #00F;
+    padding: 10px 20px 10px 0px;    
+    background: url('images/up.gif') no-repeat scroll right center transparent !important;
+}
+.expanded {
+    cursor: pointer;
+    color: #00F;
+    padding: 10px 20px 10px 0px;
+    background: url('images/down.gif') no-repeat scroll right center transparent !important;
+}
 
 .icon_status_fail{
 	width:16px;
@@ -190,3 +331,141 @@ h1{
 	background: url('images/success_16x16.png') no-repeat scroll right center transparent !important;
 }
 
+.status_color_checkbox{
+	float:left;
+	width:15px !important;
+	height:18px !important;
+	text-align:justify;
+}
+
+.status_color_checkbox_description{
+	float:left;
+	width:15px !important;
+	height:15px !important;
+	text-align:justify;
+}
+
+
+/*
+
+#msg{
+	margin:5px 5px; 5px 10px;
+}
+.msg_success{
+	color:blue;
+}
+
+.msg_fail{
+	color:red;
+}
+
+*/
+
+
+
+
+
+
+
+/**=================================================================*/
+/*begin check box*/
+@font-face {
+    font-family: 'ModernPictogramsNormal';
+    src: url('fonts/modernpics-webfont.eot');
+    src: url('fonts/modernpics-webfont.eot?#iefix') format('embedded-opentype'),
+         url('fonts/modernpics-webfont.woff') format('woff'),
+         url('fonts/modernpics-webfont.ttf') format('truetype'),
+         url('fonts/modernpics-webfont.svg#ModernPictogramsNormal') format('svg');
+    font-weight: normal;
+    font-style: normal;
+}
+
+.checkbox label {
+	/*display: inline-block;*/
+	cursor: pointer;
+	position: relative ;	
+	padding-left: 25px;
+	/*padding-left: 0px;*/
+	margin-right: 15px;
+	font-size: 13px;
+}
+.radio label {
+	/*display: inline-block;*/
+	cursor: pointer;
+	position: relative;
+	padding-left: 25px;
+	margin-right: 15px;
+	font-size: 13px;
+}
+
+.radio input[type=radio],
+.checkbox input[type=checkbox] {
+	display: none;
+}
+.radio label:before {
+	content: "";
+	/*display: inline-block;*/
+
+	width: 16px;
+	height: 16px;
+
+	margin-right: 10px;
+	position: absolute;
+	left: 0;
+	bottom: 1px;
+	/*background-color: #aaa;*/
+	background-color: #FFF;
+	box-shadow: inset 0px 2px 3px 0px rgba(0, 0, 0, .3), 0px 1px 0px 0px rgba(255, 255, 255, .8);
+}
+.checkbox label:before {
+	content: "";
+	/*display: inline-block;*/
+
+	width: 16px;
+	height: 16px;
+
+	margin-right: 10px;
+	position: absolute;
+	left: 0;
+	bottom: 1px;
+	/*background-color: #aaa;*/
+	background-color: #FFF;
+	box-shadow: inset 0px 2px 3px 0px rgba(0, 0, 0, .3), 0px 1px 0px 0px rgba(255, 255, 255, .8);
+}
+.radio label:before {
+	border-radius: 8px;
+}
+.checkbox label {
+	margin-bottom: 10px;
+}
+.checkbox label:before {
+    border-radius: 3px;
+}
+table {
+	color:#616161;
+}
+input[type=radio]:checked + label:before {
+    content: "\2022";
+    /*color: #f3f3f3;*/
+	color: #85B5D9;
+    font-size: 30px;
+    text-align: center;
+    line-height: 18px;
+}
+
+input[type=checkbox]:checked + label:before {
+	content: "\2713";
+	text-shadow: 2px 2px 2px rgba(0, 0, 0, .2);
+	font-size: 25px;
+	font-weight:bold;
+	/*color: #f3f3f3;*/
+	color: #85B5D9;
+	text-align: center;
+    line-height: 15px;
+}
+
+/*end check box*/
+
+.common_title{
+	font-weight:bold;
+}
