--- a/themes/admintasia/css/reset.css
+++ b/themes/admintasia/css/reset.css
@@ -1,9 +1,9 @@
 	/* css reset */
 html, body, div, span, applet, object, iframe,
-h1, h2, h3, h4, h5, h6, p, blockquote, pre,
+/*h1, h2, h3, h4, h5, h6, p,*/ blockquote, pre,
 a, abbr, acronym, address, big, cite, code,
 del, dfn, em, font, img, ins, kbd, q, s, samp,
-small, strike, strong, sub, sup, tt, var,
+small, strike/*, strong*/, sub, sup, tt, var,
 dl, dt, dd, ol, ul, li,
 fieldset, form, label, legend,
 table, caption, tbody, tfoot, thead, tr, th, td {
@@ -13,7 +13,7 @@ table, caption, tbody, tfoot, thead, tr, th, td {
 	outline: 0;
 	font-weight: inherit;
 	font-style: inherit;
-	font-size: 100%;
+	font-size: 100%;	
 	font-family: inherit;
 	vertical-align: baseline;
 }
@@ -69,7 +69,7 @@ html, body {
 }
 
 p {
-	padding:10px 0;
+	/*padding:10px 0;*/
 	line-height:1.6em;
 }
 
