--- a/css/template.css
+++ b/css/template.css
@@ -1095,10 +1095,11 @@ color: #FFFF25;
     border-left: 6px solid #0f5299;
     color: white;
     display: block;
-    height: 30px;
+    height: auto;
+	min-height:30px;
     padding-left: 15px;
     text-transform: uppercase;
-	font-size: 125%;
+	font-size: 100%;
     line-height: 30px;	
 	font-weight:bold;
 }
@@ -1129,7 +1130,9 @@ color: #FFFF25;
 }
 
 .news_short{
-text-align:justify;
+	text-align:justify;
+	font-size:13x !important;	
+	font-size:15px;
 }
 
 .news_title_detail{
